Fixing spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -54,7 +54,7 @@
 @media (max-width: 991px) {
 
 	.time-logo-section {
-		margin-top: 1rem !important;
+		/*margin-top: 1rem !important;*/
 		margin-right: 0rem !important;
 		margin-bottom: 2rem;
 		padding-left: 0rem !important;
