--- a/css/top-section.css
+++ b/css/top-section.css
@@ -17,7 +17,7 @@
 
 .time-logo-section {
 	vertical-align: middle;
-	margin: 5vh 0;
+	margin: 10vh 0;
 	/*margin-bottom: 4rem;*/
 }
 
@@ -52,7 +52,7 @@
 form {
 	margin-top: 3rem;
 	display: block;
-	width: 100%;
+	/*width: 100%;*/
 	/*margin-left: 0 !important;
 	padding-left: 0 !important;
 	padding-right: 0 !important;*/
